[package]
name = "untitled3"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
futures-util = "0.3.31"
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
governor = "0.8.0"
anyhow = "1.0.95"
dotenv = "0.15.0"
chrono = "0.4.39"
once_cell = "1.20.2"